# new-obd2-tool

./: .gitignore  AUTOMATED_BUILD_FIXES.md  BUILD_FIXES_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_NOTES.md  BUILD_STATUS.dart  CHANGELOG.md  CMAKE_BUILD.md  CMakeLists.txt  CONTRIBUTING.md  DASHBOARD_QUICK_ACTIONS.md  DEPENDENCIES.md  DEPLOYMENT.md  GPG-README.md  LICENSE  NuGet.config  README.md  ROADMAP.md  analysis_options.yaml  build.sh  cli_test.py  cmake_uninstall.cmake.in  config.json  demo.py  gpg-build.sh  gpg-dependencies.txt  install.sh  main.py  pubspec.lock.md  pubspec.yaml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
android/: build.gradle  gradlew
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
assets/data/: app_strings.json  vehicle_database.json
assets/data/strings/: app_strings_es.json  app_strings_fr.json
data/: dtc_codes.json  manufacturers.json  programming_procedures.json  vin_decoder.json
docs/: CLOUD_SYNC_GUIDE.md  DASHBOARD_QUICK_ACTIONS_IMPLEMENTATION.md  ECU_PROGRAMMING_SAFETY.md  FORD_TOOLS.md  GM_TOOLS.md  INTEGRATION_GUIDE.md  LANGUAGE_SUPPORT.md  NISSAN_TOOLS.md  VEHICLE_DIAGNOSTICS.md  VW_TOOLS.md  user_guide.md
docs/platform-support/: PLATFORM_SETUP.md
dotnet/: OBD2.Core.csproj  README.md
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
lib/: main.dart
lib/core/constants/: app_constants.dart
lib/core/converters/: icon_data_converter.dart
lib/core/models/: ai_diagnostic_result.dart  cloud_sync.dart  ecu_programming.dart  language_config.dart  obd_response.dart  vehicle_info.dart
lib/core/services/: ai_diagnostics_service.dart  cloud_sync_service.dart  data_logging_service.dart  ecu_programming_service.dart  ford_service.dart  gm_service.dart  localization_service.dart  nissan_service.dart  obd_service.dart  secure_storage_service.dart  vehicle_service.dart  vw_service.dart
lib/features/ai_diagnostics/models/: ai_diagnostic_result.dart
lib/features/ai_diagnostics/presentation/: ai_diagnostics_screen.dart
lib/features/connection_profiles/presentation/: connection_profiles_screen.dart
lib/features/custom_dashboard/presentation/: custom_dashboard_screen.dart
lib/features/dashboard/presentation/: dashboard_screen.dart
lib/features/data_export/presentation/: data_export_screen.dart
lib/features/ecu_programming/presentation/: ecu_programming_screen.dart
lib/features/ford_tools/models/: ford_data_models.dart
lib/features/ford_tools/presentation/: ford_tools_screen.dart
lib/features/gm_tools/models/: gm_data_models.dart
lib/features/gm_tools/presentation/: gm_tools_screen.dart
lib/features/history/presentation/: history_screen.dart
lib/features/nissan_tools/models/: nissan_data_models.dart
lib/features/nissan_tools/presentation/: nissan_tools_screen.dart
lib/features/pid_config/presentation/: pid_configuration_screen.dart
lib/features/predictive_maintenance/models/: maintenance_alert.dart  maintenance_schedule.dart
lib/features/predictive_maintenance/presentation/: predictive_maintenance_screen.dart
lib/features/settings/presentation/: advanced_settings_screen.dart  settings_screen.dart
lib/features/shop_management/models/: customer.dart  inventory_item.dart  work_order.dart
lib/mocks/: flutter_mocks.dart
lib/shared/models/: cloud_sync.dart  cloud_sync.g.dart  connection_config.dart  connection_profile.dart  ecu_programming.dart  ecu_programming.g.dart  language_config.dart  obd_response.dart  pid_config.dart  vehicle_info.dart  vehicle_info.g.dart
lib/shared/providers/: app_providers.dart
lib/shared/widgets/: action_button.dart  advanced_data_visualization_widget.dart  connection_widget.dart  custom_dashboard_widget.dart  custom_dashboard_widget.g.dart  data_card.dart  diagnostic_widget.dart  live_data_widget.dart  responsive_layout.dart
lib/src/models/: obd_models.dart
lib/src/services/: obd_service.dart  platform_service.dart
lib/src/ui/: app.dart
lib/src/ui/screens/: diagnostics_screen.dart  (+2 more)
linux/: CMakeLists.txt  README.md
linux/runner/: my_application.cc
macos/: CMakeLists.txt  README.md
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: README.md  build.py  check_dep.sh  install.sh  setup_dev.sh  update_deps.sh  validate_basic.sh
scripts/platform-setup/: setup_linux.sh  setup_macos.sh  setup_windows.ps1
src/: __init__.py  diagnostics.py  main.cpp  programming.py  vehicle_detection.py
src/core/: __init__.py  data_parser.py  dtc_manager.py  obd_interface.py  obd_manager.py  protocol_handler.py  protocols.py
src/diagnostics/: error_codes.py  live_data.py
src/ecu/: __init__.py  programming.py
src/gui/: __init__.py  connection_dialog.py  diagnostics_panel.py  main_gui.py  main_window.py  programming_panel.py
src/hardware/: __init__.py  adapter_manager.py  connection_types.py  elm327.py
src/manufacturers/: honda.py  toyota.py
src/plugins/: __init__.py  base_plugin.py  example_plugin.py
src/procedures/: __init__.py  relearn.py
src/utils/: config.py  helper.cpp  helper.h  logger.py
test/: ford_gm_tools_test.dart  models_test.dart  services_test.dart  vw_nissan_tools_test.dart  widget_test.dart
test/integration/: dashboard_quick_actions_test.dart
test/unit/: ai_diagnostic_result_test.dart  connection_config_test.dart  connection_profile_test.dart  dashboard_quick_actions_test.dart  data_logging_service_test.dart  obd_response_dtc_test.dart  obd_response_test.dart  pid_config_test.dart
test/widget/: advanced_data_visualization_widget_test.dart  custom_dashboard_widget_test.dart  live_data_widget_test.dart  settings_screen_test.dart  shop_management_screen_test.dart
tests/: __init__.py  test_basic.py  test_core.py  test_gui.py  test_hardware.py
web/: README.md  index.html  manifest.json
windows/: CMakeLists.txt  README.md
windows/runner/: Runner.rc  main.cpp
(+15 files in other folders)
